fix: The app-menus.component css modified so that side-nav no longer causes horizontal scroll on page.
Added position: fixed to the side-nav element.  Also updated some angular dependencies while working on the problem.

Issues: AC-1046

--- a/src/client/app/components/apps-menu/app-menus.component.css
+++ b/src/client/app/components/apps-menu/app-menus.component.css
@@ -6,3 +6,6 @@ md-sidenav md-toolbar {
   background-color: #ccc;
   color:#fff;
 }
+md-sidenav {
+  position: fixed;
+}
